clean up Transformer a bit.